`transform-origin` on SVG elements does not take into account the transform reference box origin https://bugs.webkit.org/show_bug.cgi?id=234078

Reviewed by Rob Buis.

Source/WebCore:

No new tests. This is covered by existing WPT tests.

* svg/SVGGraphicsElement.cpp:
(WebCore::SVGGraphicsElement::animatedLocalTransform const): Add the reference box origin
to the calculated reference box offset when calculating the transform origin for SVG.

LayoutTests:

* TestExpectations: Mark tests as passing.



Canonical link: https://commits.webkit.org/245167@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@286942 268f45cc-cd09-0410-ab3c-d52691b4dbfc